# EmbeddableJavaScript

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.gradle.kts  gemini_worker_review.md  gemini_worker_review_v2.md  gradle.properties  parse_coverage.py  settings.gradle.kts  test_js.sh
cmake/: check_platform_boundary.cmake
core/: CMakeLists.txt
core/include/: ejs_native_api.h  ejs_runtime.h
core/src/: README.md  ejs_abi.c  ejs_abi.h  ejs_engine.h  ejs_engine_quickjs_ng.c  ejs_engine_stub.c  ejs_error.c  ejs_error.h  ejs_native_api.c  ejs_refcount.h  ejs_runtime.c  ejs_runtime_internal.h  ejs_runtime_loop.c  ejs_runtime_loop.h  ejs_runtime_loop_libuv.c  ejs_runtime_loop_stub.c  ejs_util.h
modules/buffer/: CMakeLists.txt  README.md
modules/buffer/cmake/: generate_buffer_android_bundle.cmake  generate_buffer_bundle.cmake
modules/buffer/js/: buffer.js
modules/buffer/types/: index.d.ts
modules/fs/: CMakeLists.txt  README.md
modules/fs/cmake/: generate_fs_bundle.cmake
modules/fs/js/: fs.js
modules/fs/types/: index.d.ts
modules/fswatch/: CMakeLists.txt  README.md
modules/fswatch/cmake/: generate_fswatch_bundle.cmake
modules/fswatch/js/: fswatch.js
modules/fswatch/types/: index.d.ts
modules/kv/: CMakeLists.txt  README.md
modules/kv/cmake/: generate_kv_bundle.cmake
modules/kv/js/: kv.js
modules/kv/types/: index.d.ts
modules/package/: CMakeLists.txt  README.md
modules/path/: CMakeLists.txt  README.md
modules/path/cmake/: generate_path_android_bundle.cmake  generate_path_bundle.cmake
modules/path/js/: path.js
modules/path/types/: index.d.ts
modules/sqlite/: CMakeLists.txt  README.md
modules/sqlite/cmake/: generate_sqlite_bundle.cmake
modules/sqlite/types/: index.d.ts
modules/stdlib/hashing/: CMakeLists.txt  README.md
modules/stdlib/hashing/cmake/: generate_hashing_android_bundle.cmake  generate_hashing_bundle.cmake
modules/stdlib/hashing/js/: hashing.js
modules/stdlib/hashing/types/: index.d.ts
modules/stdlib/ipaddr/: CMakeLists.txt  README.md
modules/stdlib/ipaddr/cmake/: generate_ipaddr_android_bundle.cmake  generate_ipaddr_bundle.cmake
modules/stdlib/ipaddr/js/: ipaddr.js
modules/stdlib/ipaddr/types/: index.d.ts
modules/stdlib/uuid/: CMakeLists.txt  README.md
modules/stdlib/uuid/cmake/: generate_uuid_android_bundle.cmake  generate_uuid_bundle.cmake
modules/stdlib/uuid/js/: uuid.js
modules/stdlib/uuid/types/: index.d.ts
modules/system/: CMakeLists.txt  README.md
modules/system/cmake/: generate_system_bundle.cmake
modules/system/js/: system.js
modules/system/types/: index.d.ts
modules/wintertc/: CMakeLists.txt  README.md  api.d.ts  js_api_zh.md
modules/wintertc/cmake/: generate_wintertc_bundle.cmake
modules/wintertc/js/: blob.js  bootstrap.js  console.js  crypto.js  encoding.js  events.js  fetch.js  performance.js  streams.js  timers.js  url.js
modules/wintertc/platform/: README.md
modules/worker/: CMakeLists.txt  README.md
modules/worker/cmake/: generate_worker_bundle.cmake
modules/worker/js/: worker_child.js  worker_parent.js
modules/worker/types/: index.d.ts
modules/ws/: CMakeLists.txt  README.md
modules/ws/cmake/: generate_ws_bundle.cmake
modules/ws/js/: ws.js
modules/ws/types/: index.d.ts
modules/xhr/: CMakeLists.txt  README.md
modules/xhr/cmake/: generate_xhr_bundle.cmake
modules/xhr/js/: xhr.js
modules/xhr/types/: index.d.ts
platform/android/: CMakeLists.txt
platform/android/cmake/: write_manifest_permissions.cmake
platform/android/gradle/: README.md
platform/android/gradle/ejs-android/: build.gradle.kts  consumer-rules.pro
platform/android/jni/: ejs_android_platform.cpp
platform/apple/: CMakeLists.txt
platform/apple/include/: EJSApplePlatform.h  EJSContext.h  EJSContextConfiguration.h  EJSProvider.h  EJSRuntime.h  EJSRuntimeConfiguration.h
platform/apple/src/: EJSAppleInstallTransactionInternal.h  EJSApplePlatform.m
sample/: CMakeLists.txt  ejs_apple_sample.m  ejs_sample.c
tests/: CMakeLists.txt
tests/android/: ejs_android_platform_test.cpp
tests/apple/: ejs_apple_cli_test.m  ejs_apple_platform_test.m
tests/buffer/apple/: ejs_buffer_apple_test.m
tests/core/: README.md  ejs_core_test.c  ejs_regression_smoke.c
tests/core/support/: ejs_fake_host.c  ejs_fake_host.h
tests/ejspkg/: cheerio_conversion_test.js  converter_test.js
tests/fixtures/: README.md
tests/fixtures/npm/denied-dynamic-require/: index.js  package.json
tests/fixtures/npm/denied-invalid-conditional-exports/: package.json
tests/fixtures/npm/denied-invalid-dependency-exports/: index.js  package.json
tests/fixtures/npm/denied-invalid-exports-target/: package.json
tests/fixtures/npm/denied-lifecycle/: package.json
tests/fixtures/npm/denied-native/: package.json
tests/fixtures/platform_boundary_violation/: CMakeLists.txt
tests/fs/: README.md
tests/fs/apple/: ejs_fs_apple_test.m
tests/fswatch/apple/: ejs_fswatch_apple_test.m
tests/integration/: README.md
tests/js/: network_js_test.js  phase1_modules_js_test.js  worker_js_test.js
tests/kv/: README.md
tests/kv/apple/: ejs_kv_apple_test.m
tests/net/apple/: ejs_net_apple_test.m
tests/package/apple/: ejs_package_apple_test.m  ejs_package_cheerio_apple_test.m
tests/path/apple/: ejs_path_apple_test.m
tests/sqlite/: README.md
tests/sqlite/apple/: ejs_sqlite_apple_test.m
tests/stdlib/apple/: ejs_stdlib_apple_test.m
tests/system/apple/: ejs_system_apple_test.m
tests/wintertc/: README.md
tests/wintertc/apple/: ejs_wintertc_apple_test.m
tests/worker/apple/: ejs_worker_apple_test.m
tests/ws/apple/: ejs_ws_apple_test.m
tests/xhr/apple/: ejs_xhr_apple_test.m
tools/apple/: CMakeLists.txt  EJSAppleCLISupport.h  EJSAppleCLISupport.m  ejs_apple_cli_main.m  package_apple_distribution.sh
tools/apple/examples/: api_check.js  hello_workers.js  http_api_test_server.js  listdir.js  process.js  repo_report.js  resolve.js  test-args.js  test-env.js  test-fetch.js  test-fs.js  test-hashing.js  test-kv.js  test-random.js  test-storage.js  test-system.js  test-timer.js  test-uuid.js  worker.js
(+154 files in other folders)
